Expand integration test features